# mostly-precise-gc

./: CMakeLists.txt  GC_documentation.docx  GC_documentation.txt  Makefile  Makefile.am  README.md  autogen.sh  config.h.cmake  config.h.in  configure.ac  libgc.h  libgc.h~  makefile  makefile~  styleGuide.txt
Roots2/: collect.cpp  collect.h  gc_ptr.h  sample.cpp  stack.cpp  stack.h
bib/: malloc.c
boehm-test/: b.cpp
dlmalloc/: Makefile  makefile  malloc.c  mark.h  test.c
evaluation/: GCBench.cpp  config.h  evaluate.py
gc_new/: gc_new.cpp  gc_new.h  gc_new2.h
my_set/: b.cpp  gc.h  gc2.h  listTest.cpp  makefile  my_set.cpp  my_set_make  my_test.cpp  output
object_repres/: Makefile  boxing.cpp  boxing.h  boxing2.cpp  boxing2.h  go.cpp  go.h  main.c  main2.c  malloc.c  mark.h  prototype.c  prototype.h  taginfo.cpp  taginfo.h  test.cpp
sources/: CMakeLists.txt  Makefile  Makefile.am  Makefile.in  PointerList.cpp  PointerList.h  boxing2.cpp  boxing2.h  collect.cpp  collect.h  debug_print.h  deref_roots.cpp  deref_roots.h  fake_roots.h  gc_new.cpp  gc_new.h  gc_ptr.h  gc_ref.h  go.cpp  go.h  libgc.h  malloc.cpp  malloc.h  meta_information.cpp  meta_information.h  stack.cpp  stack.h  taginfo.cpp  taginfo.cpp~  taginfo.h  threading.cpp  threading.h  tlvars.cpp  tlvars.h
sources/.deps/: boxing2.Plo  collect.Plo  gc_new.Plo  go.Plo  meta_information.Plo  stack.Plo  taginfo.Plo
tests/a_lot_of_garbage_string/: GCString.cpp  GCString.h  a_lot_of_garbage.cpp  makefile  wrong_automatic_objects_destructor_call_output.txt
tests/arrayTests/: README.md  arrayOfSingleObjects.cpp  arrayPointersTest.cpp  boxedArrayOfBoxedObjectsTest.cpp  makefile
tests/binary_tree_sort/: CMakeLists.txt  List.cpp  List.h  Tree.cpp  Tree.h  binary_tree_sort.cpp  debug_print.h  dprintf.h  makefile
tests/boehmTest/: CMakeLists.txt  README.md  b.cpp  makeOld  makefile  run instruction.txt  run instruction.txt~
tests/concurrency/: CMakeLists.txt  test.cpp
tests/gc_inside_method/: CMakeLists.txt  test.cpp
tests/gc_new_operation_time/: makefile  test.cpp
tests/gc_ptr_test/: RESULT.md  gc_new_changed.cpp  gc_ptr_test.cpp  makefile
tests/gc_ptr_timing/: CMakeLists.txt  precisegc_comparation.cpp  precisegc_comparation.h
tests/gc_tests/: README.md  makefile  test1.cpp  test2.cpp  test3.cpp  test4.cpp
tests/immutable_AVL_tree/: avl.cpp  makefile
tests/mark-and-copy/: CMakeLists.txt  test.cpp
tests/multithread_merge_sort/: CMakeLists.txt  multithread_merge_sort.cpp
tests/nonDefaultConstructorCallTest/: ReadMe.txt  makefile  test.cpp
tests/pointerToTheObjectMiddle/: makefile  test.cpp
tests/skiplist/: CMakeLists.txt  skiplist.cpp  timing.cpp  timing.h
tests/smart_pointers_overhead/: shared_ptr.cpp
tests/transferBetweenAutomaticAndManualObjectsTest/: README.md  test.cpp
