AM_CXXFLAGS = -std=c++11 -fPIC -O3
lib_LTLIBRARIES = libgc.la
include_HEADERS = libgc.h
libgc_la_LIBADD = -lmsmalloc
libgc_la_CFLAGS = -std=c++11 -fPIC -O3
libgc_la_SOURCES = boxing2.cpp boxing2.h collect.cpp collect.h gc_new.cpp gc_new.h gc_ptr.h\
go.cpp go.h libgc.h meta_information.cpp meta_information.h PointerList.cpp PointerList.h\
 stack.cpp stack.h taginfo.cpp taginfo.h


